More encapsulation of directwindow stuff into DirectWindowData. I changed lot of code (while trying to fix ticket #4311), reverted some old changes and probably messed up a lot. It's very much a work in progress. Anyway, DirectWindowStars still work correctly, but Chart (and GLTeapot) do not. I suspect a race condition between the DirectWindow creation and the activation of the direct mode on the server, maybe exposed more easily by the changes in the scheduler.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32625 a95241bf-73f2-0310-859d-f6bbb57e9c96